k8s/auth-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodshop-auth-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foodshop-auth-db
  template:
    metadata:
      labels:
        app: foodshop-auth-db
    spec:
      containers:

        - name: foodshop-auth-db-development
          image: postgres:15

          ports:
          - containerPort: 5432
          volumeMounts:
          - name: foodshop-auth-db-data
            mountPath: /var/lib/postgresql/data

      volumes:
      - name: foodshop-auth-db-data
        persistentVolumeClaim:
          claimName: foodshop-auth-db-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: foodshop-auth-db-srv
spec:
  # ***************************************** only for local dev *****************************************
  type: NodePort
  selector:
    app: foodshop-auth-db
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 32018
