k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodshop-auth-deployement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foodshop-auth
  template:
    metadata:
      labels:
        app: foodshop-auth
    spec:
      containers:
      - name: foodshop-auth-development
        image: foodshop-auth-dev
        imagePullPolicy: Never 
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: foodshop-auth-service
spec:
  type: ClusterIP
  selector:
    app: foodshop-auth
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
