k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodshop-frontend-deployement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foodshop-frontend
  template:
    metadata:
      labels:
        app: foodshop-frontend
    spec:
      containers:
      - name: foodshop-frontend-development
        image: foodshop-frontend-dev
        imagePullPolicy: Never 
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: foodshop-frontend-service
spec:
  type: ClusterIP
  selector:
    app: foodshop-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
