k8s/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodshop-nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foodshop-nats
  template:
    metadata:
      labels:
        app: foodshop-nats
    spec:
      containers:
        - name: nats
          image: nats:latest
          args:
            - -js
            - -m
            - "8222"
            - --store_dir
            - /data/jetstream
          ports:
            - containerPort: 4222
            - containerPort: 8222
            - containerPort: 6222
          volumeMounts:
            - name: jetstream-storage
              mountPath: /data/jetstream
      volumes:
        - name: jetstream-storage
          persistentVolumeClaim:
            claimName: jetstream-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: foodshop-nats-srv
spec:
  type: ClusterIP
  selector:
    app: foodshop-nats
  ports:
    - name: client
      port: 4222
    - name: monitoring
      port: 8222
    - name: cluster
      port: 6222
