k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodshop-orders-deployement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foodshop-orders
  template:
    metadata:
      labels:
        app: foodshop-orders
    spec:
      containers:
      - name: foodshop-orders-development
        image: foodshop-orders-dev
        imagePullPolicy: Never 
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: foodshop-orders-service
spec:
  type: ClusterIP
  selector:
    app: foodshop-orders
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
