k8s/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodshop-products-deployement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foodshop-products
  template:
    metadata:
      labels:
        app: foodshop-products
    spec:
      containers:
      - name: foodshop-products-development
        image: foodshop-products-dev
        imagePullPolicy: Never 
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: foodshop-products-service
spec:
  type: ClusterIP
  selector:
    app: foodshop-products
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
